--- a/package.json
+++ b/package.json
@@ -2,28 +2,35 @@
   "private": true,
   "scripts": {
     "dev": "next",
+    "lint": "next lint",
     "build": "next build",
     "start": "next start",
     "typecheck": "tsc"
   },
   "dependencies": {
-    "classnames": "2.3.1",
-    "date-fns": "2.21.3",
-    "gray-matter": "4.0.3",
-    "next": "latest",
+    "classnames": "^2.3.1",
+    "date-fns": "^2.28.0",
+    "esbuild": "^0.14.11",
+    "gray-matter": "^4.0.3",
+    "mdx-bundler": "^8.0.1",
+    "next": "^12.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remark": "13.0.0",
-    "remark-html": "13.0.1",
     "typescript": "^4.2.4"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.23",
-    "@types/node": "^15.6.0",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.9",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
-    "autoprefixer": "10.4.0",
-    "postcss": "8.4.5",
-    "tailwindcss": "3.0.5"
+    "autoprefixer": "^10.4.2",
+    "eslint": "^8.7.0",
+    "eslint-config-next": "^12.0.8",
+    "eslint-config-prettier": "^8.3.0",
+    "postcss": "^8.4.5",
+    "rehype-prism-plus": "^1.3.1",
+    "remark-gfm": "^3.0.1",
+    "tailwindcss": "^3.0.15",
+    "tslib": "^2.3.1"
   }
 }
