--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^4.2.4"
   },
   "devDependencies": {
+    "@mapbox/rehype-prism": "^0.8.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.9",
     "@types/react": "^17.0.6",
@@ -29,8 +30,14 @@
     "eslint-config-next": "^12.0.8",
     "eslint-config-prettier": "^8.3.0",
     "postcss": "^8.4.5",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-katex": "^6.0.2",
     "rehype-prism-plus": "^1.3.1",
+    "rehype-slug": "^5.0.1",
+    "remark-code-titles": "^0.1.2",
     "remark-gfm": "^3.0.1",
+    "remark-math": "^5.1.1",
+    "remark-toc": "^8.0.1",
     "tailwindcss": "^3.0.15",
     "tslib": "^2.3.1"
   }
